--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openmoji": "^16.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.34.5",
     "stripe": "^19.1.0",
     "tesseract.js": "^6.0.1"
   }
